fixed sidebar overflow

--- a/client/app/main/main.css
+++ b/client/app/main/main.css
@@ -9,6 +9,7 @@ h1, h2, h3, h4 {
   top: 0;
   bottom: 90px;
   padding: 0;
+  overflow-y: scroll;
   z-index: 1000;
 }
 
@@ -29,7 +30,6 @@ h1, h2, h3, h4 {
 .main-sidebar-mobile-expanded {
   background-color: #ECEFF1;
   padding: 0 0 10px 0;
-  /* 141 px is height of navbar and action bar footer */
 /*  transition: 0.2s ease-in-out;
 */ z-index: 1000;
   display: flex;
